--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,28 @@
 .idea
 result
+*.md
+
 **/.exercism
 c/**/test-framework
-c/**/HELP.md
 c/**/makefile
 c/**/README.md
 c/**/*.s
 c/**/test_*.c
+
+java/**/*.css
+java/**/*.gradle
+java/**/*.lock
+java/**/*.properties
+java/**/*.html
+java/**/*.bin
+java/**/*.probe
+java/**/gradlew
+java/**/*.bat
+java/**/*.idx
+java/**/*.class
+java/**/*.jar
+java/**/*.js
+java/**/*.xml
+
+# tmp
+*.java
